[project]
name = "kgraph"
version = "0.1.3"
description = "A high-performance Knowledge Graph MCP server for code analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-java",
    "lancedb",
    "sentence-transformers",
    "numpy",
]

[project.optional-dependencies]
mlx = [
    "mlx",
    "mlx-embeddings",
]

[project.scripts]
kgraph = "kgraph.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kgraph"]
