[project]
name = "kgraph"
version = "0.4.0"
description = "A high-performance Knowledge Graph MCP server for code analysis"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-java",
    "tree-sitter-go",
    "tree-sitter-typescript",
    "lancedb",
    "lance-namespace==0.0.21",
    "sentence-transformers",
    "numpy",
    "watchdog",
]

[project.optional-dependencies]
mlx = [
    "mlx",
    "mlx-embeddings",
]

[project.scripts]
kgraph = "kgraph.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kgraph"]
